[css] Fix button padding and spacing

--- a/styles.css
+++ b/styles.css
@@ -411,9 +411,10 @@ body {
   outline: none;
   border: none;
 
-  padding: 0.15rem;
+  padding: 0.25rem;
   padding-left: 0.3rem;
   padding-right: 0.3rem;
+  padding-bottom: 0.35rem;
 
   transition: 200ms ease-out;
   -webkit-box-shadow: 0px 2px 15px -5px rgba(0,0,0,0.75);
@@ -436,6 +437,7 @@ body {
   letter-spacing: 0.05em;
   font-size: 0.8rem;
   text-decoration: none;
+  line-height: 1;
 
   color: #fff;
   background-color: rgb(209, 55, 6);
